# fashion-rag

./: .gitignore  .pre-commit-config.yaml  EVAL.md  Makefile  PLAN.md  README.md  app.py  claude.md  embed.py  pyproject.toml  search.py
api_server/: Dockerfile  cli.py  server.py
app/: Dockerfile  app.py
data/: metadata.csv
eval-outputs/: eval_categories.txt  eval_descriptions.txt
evals/: plot_confusion.py  plot_distribution.py  plot_embeddings.py  run_eval.py  run_eval_categories.py  run_eval_descriptions.py
skill/: README.md  SKILL.md  cli.py
src/fashion_rag/: config.py  embed.py  search.py
tests/: test_api_server.py  test_config.py  test_embed.py  test_search.py
vertex/: Dockerfile
vertex/components/: embed_shard.py  evaluate.py  resolve_ids.py
vertex/pipelines/: clip_embed.py
