[project]
name = "fashion-rag"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "Pillow",
    "tqdm",
    "universal-pathlib",
    "gcsfs",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "db-dtypes",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
ml = [
    "torch",
    "transformers",
]
app = [
    "fashion-rag[ml]",
    "streamlit",
]
vertex = [
    "kfp",
    "google-cloud-aiplatform",
]
eval = [
    "fashion-rag[ml]",
    "umap-learn",
]
test = [
    "fashion-rag[ml]",
    "pytest",
]
api = [
    "fashion-rag[ml]",
    "fastapi",
    "uvicorn[standard]",
    "google-cloud-storage",
    "python-multipart",
]
dev = [
    "fashion-rag[test]",
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"evals/*.py" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_rag"]
